--- a/IPSX/Flows/Funds/Storyboard/Deposit.storyboard
+++ b/IPSX/Flows/Funds/Storyboard/Deposit.storyboard
@@ -18,11 +18,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KMO-a3-mq8" userLabel="Separator">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KMO-a3-mq8" userLabel="Toast Holder">
+                                <rect key="frame" x="0.0" y="88" width="375" height="0.6666666666666714"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="ueW-JQ-dsD"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HQB-Xm-6K3" userLabel="Separator">
                                 <rect key="frame" x="0.0" y="88" width="375" height="0.6666666666666714"/>
                                 <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.30163402290000002" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="0.5" id="ueW-JQ-dsD"/>
+                                    <constraint firstAttribute="height" constant="0.5" id="agH-hS-vEB"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g9Z-Il-8x5" userLabel="Top Bar">
@@ -272,10 +279,13 @@
                         <constraints>
                             <constraint firstItem="8VJ-c3-o0d" firstAttribute="centerY" secondItem="qfg-EC-TKf" secondAttribute="centerY" id="899-3t-WcX"/>
                             <constraint firstItem="qfg-EC-TKf" firstAttribute="top" secondItem="g9Z-Il-8x5" secondAttribute="top" constant="50" id="J5t-bH-uz0"/>
+                            <constraint firstItem="qfg-EC-TKf" firstAttribute="trailing" secondItem="HQB-Xm-6K3" secondAttribute="trailing" id="KDq-tl-Tmp"/>
+                            <constraint firstItem="HQB-Xm-6K3" firstAttribute="leading" secondItem="qfg-EC-TKf" secondAttribute="leading" id="NDW-HG-agt"/>
                             <constraint firstItem="rC6-x6-Gsz" firstAttribute="leading" secondItem="qfg-EC-TKf" secondAttribute="leading" id="PzB-FU-cOg"/>
                             <constraint firstItem="8VJ-c3-o0d" firstAttribute="centerX" secondItem="qfg-EC-TKf" secondAttribute="centerX" id="QZH-9T-gqE"/>
                             <constraint firstItem="g9Z-Il-8x5" firstAttribute="leading" secondItem="qfg-EC-TKf" secondAttribute="leading" id="RJd-yn-5ef"/>
                             <constraint firstItem="rC6-x6-Gsz" firstAttribute="top" secondItem="KMO-a3-mq8" secondAttribute="bottom" id="XHg-In-tat"/>
+                            <constraint firstItem="HQB-Xm-6K3" firstAttribute="top" secondItem="g9Z-Il-8x5" secondAttribute="bottom" id="enc-IW-PuT"/>
                             <constraint firstItem="KMO-a3-mq8" firstAttribute="leading" secondItem="qfg-EC-TKf" secondAttribute="leading" id="f74-jt-RKE"/>
                             <constraint firstItem="KMO-a3-mq8" firstAttribute="top" secondItem="g9Z-Il-8x5" secondAttribute="bottom" id="hTB-xi-31T"/>
                             <constraint firstItem="qfg-EC-TKf" firstAttribute="bottom" secondItem="rC6-x6-Gsz" secondAttribute="bottom" id="kel-kR-S0Z"/>
@@ -907,11 +917,18 @@ Please contact us at support@ip.sx if you have any queries about these Special T
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9un-qZ-WXA" userLabel="Separator">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9un-qZ-WXA" userLabel="Toast Holder">
+                                <rect key="frame" x="0.0" y="88" width="375" height="0.6666666666666714"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="e90-hj-s7p"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DFf-A0-64a" userLabel="Separator">
                                 <rect key="frame" x="0.0" y="88" width="375" height="0.6666666666666714"/>
                                 <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.30163402290000002" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="0.5" id="e90-hj-s7p"/>
+                                    <constraint firstAttribute="height" constant="0.5" id="CKB-F9-STw"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lPi-Px-CdW" userLabel="Top Bar">
@@ -1029,8 +1046,10 @@ Please contact us at support@ip.sx if you have any queries about these Special T
                         <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="010-iL-AAp" firstAttribute="top" secondItem="gUo-XO-IZO" secondAttribute="bottom" constant="40" id="3Di-xh-H4y"/>
+                            <constraint firstItem="I2w-pa-9Ki" firstAttribute="trailing" secondItem="DFf-A0-64a" secondAttribute="trailing" id="3GW-BI-hse"/>
                             <constraint firstItem="GvY-zu-jcO" firstAttribute="top" secondItem="4Ld-dy-bL0" secondAttribute="bottom" constant="9" id="Anb-EP-RJY"/>
                             <constraint firstItem="gUo-XO-IZO" firstAttribute="centerY" secondItem="Dkm-Sb-qjO" secondAttribute="centerY" id="Bip-Fy-mRg"/>
+                            <constraint firstItem="DFf-A0-64a" firstAttribute="top" secondItem="lPi-Px-CdW" secondAttribute="bottom" id="C9z-oE-bmD"/>
                             <constraint firstItem="I2w-pa-9Ki" firstAttribute="trailing" secondItem="9un-qZ-WXA" secondAttribute="trailing" id="Dva-a8-ulh"/>
                             <constraint firstItem="GvY-zu-jcO" firstAttribute="centerX" secondItem="I2w-pa-9Ki" secondAttribute="centerX" id="GH4-Db-AT8"/>
                             <constraint firstItem="AdJ-Hc-ESl" firstAttribute="centerX" secondItem="4Ld-dy-bL0" secondAttribute="centerX" id="Hkt-6c-lpu"/>
@@ -1046,6 +1065,7 @@ Please contact us at support@ip.sx if you have any queries about these Special T
                             <constraint firstItem="I2w-pa-9Ki" firstAttribute="trailing" secondItem="010-iL-AAp" secondAttribute="trailing" constant="16" id="fxQ-hC-nP7"/>
                             <constraint firstItem="3pV-03-Tau" firstAttribute="centerY" secondItem="I2w-pa-9Ki" secondAttribute="centerY" id="g6v-1K-m1j"/>
                             <constraint firstItem="I2w-pa-9Ki" firstAttribute="leading" secondItem="Dkm-Sb-qjO" secondAttribute="leading" id="gqF-fN-ltH"/>
+                            <constraint firstItem="DFf-A0-64a" firstAttribute="leading" secondItem="I2w-pa-9Ki" secondAttribute="leading" id="guH-eS-pqC"/>
                             <constraint firstItem="I2w-pa-9Ki" firstAttribute="leading" secondItem="3pV-03-Tau" secondAttribute="leading" id="h4T-vo-Gik"/>
                             <constraint firstItem="I2w-pa-9Ki" firstAttribute="trailing" secondItem="lPi-Px-CdW" secondAttribute="trailing" id="hv3-7l-zK7"/>
                             <constraint firstItem="I2w-pa-9Ki" firstAttribute="trailing" secondItem="Dkm-Sb-qjO" secondAttribute="trailing" id="ijm-FR-kFW"/>
