--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -363,11 +363,18 @@
                                     <constraint firstAttribute="trailing" secondItem="J3J-ef-Gd5" secondAttribute="trailing" id="fWP-Zx-wMi"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gar-De-dh8" userLabel="Separator">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gar-De-dh8" userLabel="Toast Holder">
                                 <rect key="frame" x="0.0" y="88" width="375" height="0.6666666666666714"/>
-                                <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.29825044014084506" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="0.5" id="Rzn-Mu-5u8"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qfA-BR-FNk" userLabel="Separator">
+                                <rect key="frame" x="0.0" y="88" width="375" height="0.6666666666666714"/>
+                                <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.29825044010000001" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="BeH-ty-TJk"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YHk-Zj-Naz" userLabel="Top Bar">
@@ -583,6 +590,7 @@
                             <constraint firstItem="gar-De-dh8" firstAttribute="top" secondItem="YHk-Zj-Naz" secondAttribute="bottom" id="WPI-iS-ivX"/>
                             <constraint firstItem="9P1-sa-ISd" firstAttribute="width" secondItem="T69-ub-Uaa" secondAttribute="width" multiplier="1:3" id="b4o-j4-ndk"/>
                             <constraint firstItem="EX3-po-RYU" firstAttribute="width" secondItem="T69-ub-Uaa" secondAttribute="width" multiplier="1:3" id="c2s-X2-ARm"/>
+                            <constraint firstItem="qfA-BR-FNk" firstAttribute="leading" secondItem="gIv-Tu-HaQ" secondAttribute="leading" id="cBI-bd-WYw"/>
                             <constraint firstItem="2Xs-5a-Py6" firstAttribute="leading" secondItem="gIv-Tu-HaQ" secondAttribute="leading" id="g8I-p0-ZLm"/>
                             <constraint firstItem="4f7-ik-z4J" firstAttribute="width" secondItem="T69-ub-Uaa" secondAttribute="width" multiplier="1:3" id="hXB-26-Sy8"/>
                             <constraint firstItem="gar-De-dh8" firstAttribute="trailing" secondItem="YHk-Zj-Naz" secondAttribute="trailing" id="hYD-6f-QgR"/>
@@ -592,8 +600,10 @@
                             <constraint firstItem="s7w-JR-Nif" firstAttribute="top" secondItem="J8a-NR-0V7" secondAttribute="bottom" id="oi6-MH-dGc"/>
                             <constraint firstItem="J8a-NR-0V7" firstAttribute="leading" secondItem="gIv-Tu-HaQ" secondAttribute="leading" id="ow1-d6-Ruh"/>
                             <constraint firstItem="EX3-po-RYU" firstAttribute="centerY" secondItem="9P1-sa-ISd" secondAttribute="centerY" id="pzG-JD-sTc"/>
+                            <constraint firstItem="qfA-BR-FNk" firstAttribute="top" secondItem="YHk-Zj-Naz" secondAttribute="bottom" id="ryE-bc-pt2"/>
                             <constraint firstItem="9wh-bB-9UA" firstAttribute="centerX" secondItem="gIv-Tu-HaQ" secondAttribute="centerX" id="s6v-BE-Qgi"/>
                             <constraint firstItem="gIv-Tu-HaQ" firstAttribute="trailing" secondItem="s7w-JR-Nif" secondAttribute="trailing" id="sLQ-BM-7X0"/>
+                            <constraint firstItem="gIv-Tu-HaQ" firstAttribute="trailing" secondItem="qfA-BR-FNk" secondAttribute="trailing" id="vJM-Dc-WC3"/>
                             <constraint firstItem="gIv-Tu-HaQ" firstAttribute="trailing" secondItem="YHk-Zj-Naz" secondAttribute="trailing" id="vxB-Af-YMl"/>
                             <constraint firstItem="gIv-Tu-HaQ" firstAttribute="trailing" secondItem="J8a-NR-0V7" secondAttribute="trailing" id="wCG-fd-vEG"/>
                             <constraint firstItem="EX3-po-RYU" firstAttribute="leading" secondItem="9P1-sa-ISd" secondAttribute="trailing" id="yKQ-87-PG8"/>
@@ -1852,11 +1862,18 @@ and rent your first proxy.</string>
                                     <outlet property="delegate" destination="HWT-Sk-n3y" id="oyj-TB-KDS"/>
                                 </connections>
                             </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cXb-Cx-jfH" userLabel="Separator">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cXb-Cx-jfH" userLabel="Toast Holder">
+                                <rect key="frame" x="0.0" y="88" width="375" height="0.6666666666666714"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="xG3-Fd-233"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="set-Wj-sFF" userLabel="Separator">
                                 <rect key="frame" x="0.0" y="88" width="375" height="0.6666666666666714"/>
                                 <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.29825044010000001" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="0.5" id="xG3-Fd-233"/>
+                                    <constraint firstAttribute="height" constant="0.5" id="9By-Vw-UuO"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="foH-a0-b2v" userLabel="Top Bar">
@@ -1898,13 +1915,16 @@ and rent your first proxy.</string>
                             <constraint firstItem="cXb-Cx-jfH" firstAttribute="leading" secondItem="foH-a0-b2v" secondAttribute="leading" id="0OV-KZ-YR0"/>
                             <constraint firstItem="wFK-bX-p2G" firstAttribute="trailing" secondItem="rOv-Iz-oI1" secondAttribute="trailing" id="2BV-h4-8VG"/>
                             <constraint firstItem="cXb-Cx-jfH" firstAttribute="trailing" secondItem="foH-a0-b2v" secondAttribute="trailing" id="7aR-rr-h33"/>
+                            <constraint firstItem="wFK-bX-p2G" firstAttribute="trailing" secondItem="set-Wj-sFF" secondAttribute="trailing" id="DwW-eL-Lpe"/>
                             <constraint firstItem="foH-a0-b2v" firstAttribute="leading" secondItem="wFK-bX-p2G" secondAttribute="leading" id="Ffm-Pw-TOS"/>
                             <constraint firstItem="wFK-bX-p2G" firstAttribute="trailing" secondItem="foH-a0-b2v" secondAttribute="trailing" id="G5B-wP-mM0"/>
                             <constraint firstItem="hlu-rV-KRZ" firstAttribute="centerY" secondItem="wFK-bX-p2G" secondAttribute="centerY" id="GsP-7F-cMQ"/>
+                            <constraint firstItem="set-Wj-sFF" firstAttribute="leading" secondItem="wFK-bX-p2G" secondAttribute="leading" id="Hhb-Xd-WQ4"/>
                             <constraint firstItem="LxI-ic-oJm" firstAttribute="centerY" secondItem="wFK-bX-p2G" secondAttribute="centerY" id="IPX-rr-Quz"/>
                             <constraint firstItem="rOv-Iz-oI1" firstAttribute="leading" secondItem="wFK-bX-p2G" secondAttribute="leading" id="UXy-GN-By9"/>
                             <constraint firstItem="hlu-rV-KRZ" firstAttribute="centerX" secondItem="wFK-bX-p2G" secondAttribute="centerX" id="c5B-JL-sYB"/>
                             <constraint firstItem="LxI-ic-oJm" firstAttribute="centerX" secondItem="wFK-bX-p2G" secondAttribute="centerX" id="rlq-el-v1S"/>
+                            <constraint firstItem="set-Wj-sFF" firstAttribute="top" secondItem="foH-a0-b2v" secondAttribute="bottom" id="uZV-73-Lac"/>
                             <constraint firstItem="rOv-Iz-oI1" firstAttribute="top" secondItem="cXb-Cx-jfH" secondAttribute="bottom" constant="-1" id="xEl-nT-b7J"/>
                             <constraint firstItem="wFK-bX-p2G" firstAttribute="top" secondItem="foH-a0-b2v" secondAttribute="top" constant="50" id="yRc-wW-V7X"/>
                             <constraint firstItem="cXb-Cx-jfH" firstAttribute="top" secondItem="foH-a0-b2v" secondAttribute="bottom" id="yeU-jC-edd"/>
