--- a/IPSX/Flows/Funds/Storyboard/Funds.storyboard
+++ b/IPSX/Flows/Funds/Storyboard/Funds.storyboard
@@ -18,11 +18,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uX3-OT-pwB" userLabel="Separator">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uX3-OT-pwB" userLabel="Toast Holder">
+                                <rect key="frame" x="0.0" y="88" width="375" height="0.6666666666666714"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="DXr-iz-De6"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kYQ-DD-Tsf" userLabel="Separator">
                                 <rect key="frame" x="0.0" y="88" width="375" height="0.6666666666666714"/>
                                 <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.30163402290000002" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="0.5" id="DXr-iz-De6"/>
+                                    <constraint firstAttribute="height" constant="0.5" id="Ddc-q4-z0H"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vu2-PF-pba" userLabel="Top Bar">
@@ -134,11 +141,13 @@
                         </subviews>
                         <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="kYQ-DD-Tsf" firstAttribute="leading" secondItem="f8p-bI-AGl" secondAttribute="leading" id="02N-23-P3j"/>
                             <constraint firstItem="f8p-bI-AGl" firstAttribute="trailing" secondItem="ap5-NR-bYr" secondAttribute="trailing" constant="15" id="0Ut-Mh-O2z"/>
                             <constraint firstItem="Vu2-PF-pba" firstAttribute="leading" secondItem="f8p-bI-AGl" secondAttribute="leading" id="4Fa-AG-EvF"/>
                             <constraint firstItem="0sd-v4-n45" firstAttribute="top" secondItem="7rf-Wp-1aZ" secondAttribute="bottom" constant="40" id="5vd-xA-r5b"/>
                             <constraint firstItem="tgk-Gw-vtN" firstAttribute="centerX" secondItem="f8p-bI-AGl" secondAttribute="centerX" id="A11-nn-TJ9"/>
                             <constraint firstItem="ap5-NR-bYr" firstAttribute="centerX" secondItem="kps-Ad-8kC" secondAttribute="centerX" id="CE3-uM-74M"/>
+                            <constraint firstItem="kYQ-DD-Tsf" firstAttribute="top" secondItem="Vu2-PF-pba" secondAttribute="bottom" id="CRM-Uu-cUX"/>
                             <constraint firstItem="p44-tb-hoC" firstAttribute="centerX" secondItem="tgk-Gw-vtN" secondAttribute="centerX" id="Ekz-wf-Afv"/>
                             <constraint firstItem="f8p-bI-AGl" firstAttribute="trailing" secondItem="tgk-Gw-vtN" secondAttribute="trailing" constant="34" id="JUg-nh-rkY"/>
                             <constraint firstItem="f8p-bI-AGl" firstAttribute="trailing" secondItem="Vu2-PF-pba" secondAttribute="trailing" id="Jou-lr-NAw"/>
@@ -147,6 +156,7 @@
                             <constraint firstItem="uX3-OT-pwB" firstAttribute="leading" secondItem="f8p-bI-AGl" secondAttribute="leading" id="LjX-o4-qG8"/>
                             <constraint firstItem="f8p-bI-AGl" firstAttribute="leading" secondItem="kps-Ad-8kC" secondAttribute="leading" id="MQc-pf-jX9"/>
                             <constraint firstItem="f8p-bI-AGl" firstAttribute="trailing" secondItem="uX3-OT-pwB" secondAttribute="trailing" id="NsI-ui-cAk"/>
+                            <constraint firstItem="f8p-bI-AGl" firstAttribute="trailing" secondItem="kYQ-DD-Tsf" secondAttribute="trailing" id="PtE-Kx-XTS"/>
                             <constraint firstItem="uX3-OT-pwB" firstAttribute="top" secondItem="Vu2-PF-pba" secondAttribute="bottom" id="Re0-cL-On2"/>
                             <constraint firstItem="tgk-Gw-vtN" firstAttribute="top" secondItem="p44-tb-hoC" secondAttribute="bottom" constant="9" id="SsP-7Z-ZCF"/>
                             <constraint firstItem="p44-tb-hoC" firstAttribute="top" secondItem="OuK-Q4-Gzl" secondAttribute="bottom" constant="15" id="URg-EM-Qo7"/>
@@ -186,11 +196,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wch-uz-mYI" userLabel="Separator">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wch-uz-mYI" userLabel="Toast Holder">
+                                <rect key="frame" x="0.0" y="88" width="375" height="0.6666666666666714"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="N9w-Cw-wqm"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wh7-vX-NLx" userLabel="Separator">
                                 <rect key="frame" x="0.0" y="88" width="375" height="0.6666666666666714"/>
                                 <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.30163402290000002" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="0.5" id="N9w-Cw-wqm"/>
+                                    <constraint firstAttribute="height" constant="0.5" id="LiM-Ot-f9m"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5qn-vh-EpB" userLabel="Top Bar">
@@ -433,10 +450,12 @@
                         </subviews>
                         <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="Wh7-vX-NLx" firstAttribute="leading" secondItem="swI-iR-rm5" secondAttribute="leading" id="0en-94-eVY"/>
                             <constraint firstItem="Fen-ur-KNA" firstAttribute="top" secondItem="wch-uz-mYI" secondAttribute="bottom" id="5Ed-Mo-CRP"/>
                             <constraint firstItem="wch-uz-mYI" firstAttribute="top" secondItem="5qn-vh-EpB" secondAttribute="bottom" id="9JS-AH-jjh"/>
                             <constraint firstItem="74x-PB-a0e" firstAttribute="centerX" secondItem="swI-iR-rm5" secondAttribute="centerX" id="EEj-QL-ftb"/>
                             <constraint firstItem="swI-iR-rm5" firstAttribute="top" secondItem="5qn-vh-EpB" secondAttribute="top" constant="50" id="OAb-Bb-eEK"/>
+                            <constraint firstItem="swI-iR-rm5" firstAttribute="trailing" secondItem="Wh7-vX-NLx" secondAttribute="trailing" id="Phh-ny-E0r"/>
                             <constraint firstItem="swI-iR-rm5" firstAttribute="bottom" secondItem="Fen-ur-KNA" secondAttribute="bottom" id="SQJ-wb-rth"/>
                             <constraint firstItem="swI-iR-rm5" firstAttribute="trailing" secondItem="5qn-vh-EpB" secondAttribute="trailing" id="i3d-90-can"/>
                             <constraint firstItem="swI-iR-rm5" firstAttribute="trailing" secondItem="Fen-ur-KNA" secondAttribute="trailing" id="qEb-Qw-iX0"/>
@@ -445,6 +464,7 @@
                             <constraint firstItem="74x-PB-a0e" firstAttribute="centerY" secondItem="swI-iR-rm5" secondAttribute="centerY" id="wlK-Mj-XR6"/>
                             <constraint firstItem="5qn-vh-EpB" firstAttribute="leading" secondItem="swI-iR-rm5" secondAttribute="leading" id="xL5-i9-eSR"/>
                             <constraint firstItem="swI-iR-rm5" firstAttribute="trailing" secondItem="wch-uz-mYI" secondAttribute="trailing" id="xd9-Mc-A5d"/>
+                            <constraint firstItem="Wh7-vX-NLx" firstAttribute="top" secondItem="5qn-vh-EpB" secondAttribute="bottom" id="zGu-1i-rXt"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="swI-iR-rm5"/>
                     </view>
