--- a/IPSX/Storyboard/Base.lproj/Landing.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Landing.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UkL-Ze-RCU">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UkL-Ze-RCU">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,24 +15,24 @@
             <objects>
                 <viewController id="UkL-Ze-RCU" customClass="LandingViewController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lPK-bp-Ngh">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="lT4-1r-KeI">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IPExchange" translatesAutoresizingMaskIntoConstraints="NO" id="W2h-AD-74W">
-                                <rect key="frame" x="85" y="202" width="205" height="40"/>
+                                <rect key="frame" x="85" y="226" width="205" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="205" id="2r7-cW-OSs"/>
                                     <constraint firstAttribute="height" constant="40" id="ked-L8-hpp"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MRN-Ud-kuM" userLabel="BottomView">
-                                <rect key="frame" x="0.0" y="504" width="375" height="163"/>
+                                <rect key="frame" x="0.0" y="615" width="375" height="163"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ugu-Hv-Kee" customClass="RoundedButton" customModule="IPSX" customModuleProvider="target">
-                                        <rect key="frame" x="45.5" y="54" width="284" height="44"/>
+                                        <rect key="frame" x="45.666666666666657" y="54" width="284" height="44"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="aEZ-8f-FkF"/>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="284" id="oX5-Nh-08q"/>
@@ -52,7 +52,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kCB-he-W31" customClass="RoundedButton" customModule="IPSX" customModuleProvider="target">
-                                        <rect key="frame" x="45.5" y="0.0" width="284" height="44"/>
+                                        <rect key="frame" x="45.666666666666657" y="0.0" width="284" height="44"/>
                                         <color key="backgroundColor" red="0.1647058824" green="0.67450980390000004" blue="0.87843137250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="5eI-Ud-TWR"/>
@@ -79,7 +79,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gHa-Hj-Pph">
-                                <rect key="frame" x="145" y="174" width="85" height="19.5"/>
+                                <rect key="frame" x="145" y="198.33333333333334" width="85" height="19.333333333333343"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
                                 <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1647058824" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -130,6 +130,6 @@
     </scenes>
     <resources>
         <image name="Background" width="375" height="667"/>
-        <image name="IPExchange" width="206" height="40"/>
+        <image name="IPExchange" width="206" height="40.333332061767578"/>
     </resources>
 </document>
